--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1430,110 +1430,102 @@
       </h3>
     </div>
 
-  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 16px; box-sizing: border-box; width: 100%; align-items: stretch;">
-  
-  <div style="display: flex; flex-direction: column; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-shadow: 0 2px 8px rgba(0,0,0,0.02); box-sizing: border-box; min-width: 0; text-align: left;">
-    <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Individual Scoring Avg.</span>
-    <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-  <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;"> 71.0 <span style="font-size: 15px; font-weight: 900;">(Scoreboard Adj.)</span>   </span>
-</div>
-    <div style="font-size: 15px; color: #64748b; font-weight: 600;">Raw Avg: 72.0</div>
-    <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
-  </div>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 16px; box-sizing: border-box; width: 100%; align-items: stretch;">
+      <div style="display: flex; flex-direction: column; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-shadow: 0 2px 8px rgba(0,0,0,0.02); box-sizing: border-box; min-width: 0; text-align: left;">
+        <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Individual Scoring Avg.</span>
+        <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
+          <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;"> 71.0 <span style="font-size: 15px; font-weight: normal;">(Scoreboard Adj.)</span> </span>
+        </div>
+        <div style="font-size: 15px; color: #64748b; font-weight: 600;">Raw Avg: 72.0</div>
+        <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
+      </div>
 
-  <div style="display: flex; flex-direction: column; padding: 24px; background: #0c2340; border-radius: 12px; box-shadow: 0 4px 12px rgba(12, 35, 64, 0.2); box-sizing: border-box; min-width: 0; text-align: left; position: relative; z-index: 1;">
-    <span style="display: block; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Scoring Summary</span>
-    <div style="border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 12px; margin-bottom: 12px;">
-      <span style="font-size: 26px; font-weight: 900; color: #ffffff; letter-spacing: -0.5px;">9 Under Par</span>
+      <div style="display: flex; flex-direction: column; padding: 24px; background: #0c2340; border-radius: 12px; box-shadow: 0 4px 12px rgba(12, 35, 64, 0.2); box-sizing: border-box; min-width: 0; text-align: left; position: relative; z-index: 1;">
+        <span style="display: block; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Scoring Summary</span>
+        <div style="border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 12px; margin-bottom: 12px;">
+          <span style="font-size: 26px; font-weight: 900; color: #ffffff; letter-spacing: -0.5px;">9 Under Par</span>
+        </div>
+        <div style="font-size: 15px; color: #f15a22; font-weight: 700;">Out of 15 Rounds</div>
+        <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
+      </div>
+
+      <div style="display: flex; flex-direction: column; padding: 24px 24px 20px 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; border-bottom: 4px solid #10b981; box-sizing: border-box; min-width: 0; text-align: left;">
+        <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Academic Discipline</span>
+        <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
+          <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">3.4 GPA</span>
+        </div>
+        <div style="font-size: 15px; color: #64748b; font-weight: 600;">Fall 2025 Semester</div>
+        <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #10b981; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">METRIC: Fall Finalized</div>
+      </div>
     </div>
-    <div style="font-size: 15px; color: #f15a22; font-weight: 700;">Out of 15 Rounds</div>
-    <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
-  </div>
-
-  <div style="display: flex; flex-direction: column; padding: 24px 24px 20px 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; border-bottom: 4px solid #10b981; box-sizing: border-box; min-width: 0; text-align: left;">
-    <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Academic Discipline</span>
-    <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-      <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">3.4 GPA</span>
-    </div>
-    <div style="font-size: 15px; color: #64748b; font-weight: 600;">Fall 2025 Semester</div>
-    <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #10b981; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">METRIC: Fall Finalized</div>
-  </div>
-
-</div>
   </div>
 
   <div class="advanced-analysis-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
-  <div style="margin-bottom: 25px; box-sizing: border-box;">
-    <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #f15a22; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
-      COMPETITIVE ANALYSIS 
-      <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
-    </h3>
+    <div style="margin-bottom: 25px; box-sizing: border-box;">
+      <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #f15a22; padding-left: 15px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
+        COMPETITIVE ANALYSIS 
+        <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
+      </h3>
+    </div>
+
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 16px; box-sizing: border-box; width: 100%;">
+      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-shadow: 0 2px 8px rgba(0,0,0,0.02); box-sizing: border-box; min-width: 0; text-align: left;">
+        <div>
+          <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 8px;">Head-to-Head Record</span>
+          <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
+            <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
+          </div>
+          <div style="font-size: 15px; color: #111827; font-weight: 800;">Win Rate: 72.4%</div>
+        </div>
+        <div style="margin-top: 20px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase;">STATUS: 15-Round Cumulative</div>
+      </div>
+
+      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #0c2340; border-radius: 12px; box-shadow: 0 10px 25px rgba(12, 35, 64, 0.15); box-sizing: border-box; min-width: 0; text-align: left;">
+        <div>
+          <span style="display: block; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 8px;">Counting Score Record</span>
+          <div style="border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 12px; margin-bottom: 12px;">
+            <span style="font-size: 24px; font-weight: 900; color: #ffffff; line-height: 1.2;">
+              93.3%<br>
+              <span style="font-size: 15px; color: #94a3b8; font-weight: 700;">Counting Score</span>
+            </span>
+          </div>
+        </div>
+        <div style="margin-top: 20px;">
+          <div style="display: inline-block; font-size: 10px; color: #ffffff; font-weight: 800; text-transform: uppercase; background: #f15a22; padding: 2px 8px; border-radius: 4px;">Metric: 14/15 Rounds Recorded</div>
+        </div>
+      </div>
+
+      <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-sizing: border-box; min-width: 0; text-align: left; border-bottom: 4px solid #f15a22;">
+        <div>
+          <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 8px;">Points Share (Clippd w)</span>
+          <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
+            <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
+          </div>
+          <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
+            <div>
+              <div style="font-size: 8px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
+              <div style="font-size: 13px; color: #0c2340; font-weight: 900;">168.24</div>
+            </div>
+            <div>
+              <div style="font-size: 8px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
+              <div style="font-size: 13px; color: #0c2340; font-weight: 900;">513.29</div>
+            </div>
+            <div>
+              <div style="font-size: 8px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
+              <div style="font-size: 11px; color: #0c2340; font-weight: 900;">15 Rounds</div>
+            </div>
+          </div>
+        </div>
+        <div style="margin-top: 20px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase;">STATUS: 15-Round Cumulative</div>
+      </div>
+    </div>
+
+    <div style="margin: 25px auto 0 auto; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: block; clear: both;">
+      Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
+      Note: Team Total includes participating team-member entries only (individual-only entries excluded).
+    </div>
   </div>
-
-  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 16px; box-sizing: border-box; width: 100%;">
-    
-    <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-shadow: 0 2px 8px rgba(0,0,0,0.02); box-sizing: border-box; min-width: 0; text-align: left;">
-      <div>
-        <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 8px;">Head-to-Head Record</span>
-        <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-          <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
-        </div>
-        <div style="font-size: 15px; color: #111827; font-weight: 800;">Win Rate: 72.4%</div>
-      </div>
-      <div style="margin-top: 20px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase;">STATUS: 15-Round Cumulative</div>
-    </div>
-
-    <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #0c2340; border-radius: 12px; box-shadow: 0 10px 25px rgba(12, 35, 64, 0.15); box-sizing: border-box; min-width: 0; text-align: left;">
-      <div>
-        <span style="display: block; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 8px;">Counting Score Record</span>
-        <div style="border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 12px; margin-bottom: 12px;">
-          <span style="font-size: 24px; font-weight: 900; color: #ffffff; line-height: 1.2;">
-            93.3%<br>
-            <span style="font-size: 15px; color: #94a3b8; font-weight: 700;">Counting Score</span>
-          </span>
-        </div>
-      </div>
-      <div style="margin-top: 20px;">
-        <div style="display: inline-block; font-size: 10px; color: #ffffff; font-weight: 800; text-transform: uppercase; background: #f15a22; padding: 2px 8px; border-radius: 4px;">Metric: 14/15 Rounds Recorded</div>
-      </div>
-    </div>
-
-    <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-sizing: border-box; min-width: 0; text-align: left; border-bottom: 4px solid #f15a22;">
-      <div>
-        <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 8px;">Points Share (Clippd w)</span>
-        <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-          <span style="font-size: 30px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">32.78%</span>
-        </div>
-        <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
-          <div>
-            <div style="font-size: 8px; color: #64748b; font-weight: 900; text-transform: uppercase;">(w) Points</div>
-            <div style="font-size: 13px; color: #0c2340; font-weight: 900;">168.24</div>
-          </div>
-          <div>
-            <div style="font-size: 8px; color: #64748b; font-weight: 900; text-transform: uppercase;">Team Total</div>
-            <div style="font-size: 13px; color: #0c2340; font-weight: 900;">513.29</div>
-          </div>
-          <div>
-            <div style="font-size: 8px; color: #64748b; font-weight: 900; text-transform: uppercase;">Scope</div>
-            <div style="font-size: 11px; color: #0c2340; font-weight: 900;">15 Rounds</div>
-          </div>
-        </div>
-      </div>
-      <div style="margin-top: 20px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase;">STATUS: 15-Round Cumulative</div>
-    </div>
-  </div>
-
-<div style="margin: 25px auto 0 auto; font-size: 11px; color: #94a3b8; font-weight: 700; line-height: 1.6; width: 100%; text-align: center; box-sizing: border-box; display: block; clear: both;">
-  Points Share represents the proportion of Clippd (w) Points relative to the team total.<br>
-  Note: Team Total includes participating team-member entries only (individual-only entries excluded).
-</div>
-</div>
-</div>
-  
-
-  
-  <div style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
   <div class="analysis-bottom-section" style="width: 100%; box-sizing: border-box;">
     <div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
@@ -1548,9 +1540,9 @@
           </p>
         </div>
       </div>
-    <div style="text-align: right; padding: 10px 25px 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
-  <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
-</div>
+      <div style="text-align: right; padding: 10px 0 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
+        <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 9, 2026</span>
+      </div>
     </div>
 
     <div style="width: 100%; box-sizing: border-box;">
@@ -1578,7 +1570,7 @@
       </div>
     </div>
   </div>
-  </div> 
+</div>
 
 
 
