--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1439,14 +1439,14 @@
       </div>
 
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 16px; box-sizing: border-box; width: 100%; align-items: stretch;">
-        <div style="display: flex; flex-direction: column; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-shadow: 0 2px 8px rgba(0,0,0,0.02); box-sizing: border-box; min-width: 0; text-align: left;">
-          <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Individual Scoring Avg.</span>
-          <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-            <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;"> 71.0 <span style="font-size: 15px; font-weight: normal;">(Scoreboard Adj.)</span> </span>
-          </div>
-          <div style="font-size: 15px; color: #64748b; font-weight: 600;">Raw Avg: 72.0</div>
-          <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
-        </div>
+        <div style="display: flex; flex-direction: column; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; border-top: 5px solid #806600; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; min-width: 0; text-align: left;">
+  <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Individual Scoring Avg.</span>
+  <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
+    <span style="font-size: 26px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;"> 71.0 <span style="font-size: 15px; font-weight: normal;">(Scoreboard Adj.)</span> </span>
+  </div>
+  <div style="font-size: 15px; color: #64748b; font-weight: 600;">Raw Avg: 72.0</div>
+  <div style="margin-top: auto; padding-top: 24px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">STATUS: 15-Round Cumulative</div>
+</div>
 
         <div style="display: flex; flex-direction: column; padding: 24px; background: #0c2340; border-radius: 12px; box-shadow: 0 4px 12px rgba(12, 35, 64, 0.2); box-sizing: border-box; min-width: 0; text-align: left; position: relative; z-index: 1;">
           <span style="display: block; font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 8px;">Scoring Summary</span>
@@ -1478,16 +1478,16 @@
       </div>
 
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 16px; box-sizing: border-box; width: 100%;">
-        <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; box-shadow: 0 2px 8px rgba(0,0,0,0.02); box-sizing: border-box; min-width: 0; text-align: left;">
-          <div>
-            <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 8px;">Head-to-Head Record</span>
-            <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
-              <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
-            </div>
-            <div style="font-size: 15px; color: #111827; font-weight: 800;">Win Rate: 72.4%</div>
-          </div>
-          <div style="margin-top: 20px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase;">STATUS: 15-Round Cumulative</div>
-        </div>
+        <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #ffffff; border-radius: 12px; border: 1px solid #e5e7eb; border-top: 5px solid #806600; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; min-width: 0; text-align: left;">
+  <div>
+    <span style="display: block; font-size: 10px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 8px;">Head-to-Head Record</span>
+    <div style="border-bottom: 1px solid #f1f5f9; padding-bottom: 12px; margin-bottom: 12px;">
+      <span style="font-size: 24px; font-weight: 900; color: #0c2340;">289-98-12</span>
+    </div>
+    <div style="font-size: 15px; color: #111827; font-weight: 800;">Win Rate: 72.4%</div>
+  </div>
+  <div style="margin-top: 20px; font-size: 10px; color: #806600; font-weight: 800; text-transform: uppercase;">STATUS: 15-Round Cumulative</div>
+</div>
 
         <div style="display: flex; flex-direction: column; justify-content: space-between; padding: 24px; background: #0c2340; border-radius: 12px; box-shadow: 0 10px 25px rgba(12, 35, 64, 0.15); box-sizing: border-box; min-width: 0; text-align: left;">
           <div>
