--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1407,18 +1407,8 @@
       }
     }
   </style>
-
-<div style="width: 100%; margin: -20px auto 40px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="background: #F15A22; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
-    <div style="display: flex; align-items: center;">
-      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Performance Analytics</span>
-      <span style="margin-left: 15px; background: #0C2340; color: #ffffff; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">Clippd W</span>
-    </div>
-  </div>
-</div>
-
-  
-  
+ 
+ 
 <div style="width: 100%; max-width: 900px; margin: 0 auto 40px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="background: #F15A22; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
     <div style="display: flex; align-items: center;">
@@ -1539,10 +1529,10 @@
   
 
 
-<div class="witb-section" style="max-width: 900px; margin-top: 40px; auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="witb-section" style="width: 100%; max-width: 900px; margin: 40px auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-  <div style="margin-bottom: 40px; padding: 0 15px;">
-    <h3 style="font-size: 16px; color: #0c2340; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px;">
+  <div style="margin-bottom: 40px; padding: 0; box-sizing: border-box;">
+    <h3 style="font-size: 16px; color: #0c2340; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 20px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px; box-sizing: border-box;">
       <div style="display: flex; align-items: center; justify-content: center; background: #fdfaf3; width: 30px; height: 30px; border-radius: 6px; border: 1px solid #f1e6d0;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
           <path d="M6 12h9"></path>
