--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       <div class="tournament-info" style="display: flex; align-items: center; gap: 15px; flex: 1;">
         <div style="display: flex; align-items: center; gap: 8px; background: #0c2340; padding: 8px 14px; border-radius: 6px; white-space: nowrap;">
           <span class="status-dot-live"></span>
-          <span style="color: #ffffff; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Upcoming Qualy</span>
+          <span style="color: #ffffff; font-size: 11px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">In Progress Qualy</span>
         </div>
         <div>
           <div class="date-container" style="display: flex; align-items: baseline; gap: 8px; flex-wrap: wrap;">
