--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -354,7 +354,7 @@
   
   <div style="margin-bottom: 40px; width: 100%; box-sizing: border-box; padding: 0;">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; border-left: 5px solid #E31837; padding-left: 15px; margin-left: 10px;">
-      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">Upcoming Tournaments</h3>
+      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">In Progress Tournaments</h3>
       <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 10px;">Internal Spring Qualifier</span>
     </div>
     
