--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1524,6 +1524,48 @@
 
 
 
+<div class="analysis-bottom-section" style="width: 100%; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="width: 100%; margin-bottom: 25px; box-sizing: border-box;">
+    <div style="border-bottom: 2px solid #f1f1f1; padding-bottom: 15px; margin-bottom: 0; box-sizing: border-box;">
+      <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
+        <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 20px; box-sizing: border-box;">
+          <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
+          <span style="word-break: keep-all;">PERFORMANCE & STRATEGY ANALYSIS</span>
+        </h3>
+        <p style="margin: 0; color: #806600; font-size: 13px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; word-break: keep-all;">
+          (Freshman Season)
+        </p>
+      </div>
+    </div>
+    <div style="text-align: right; padding: 10px 0 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
+      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 11, 2026</span>
+    </div>
+  </div>
+
+  <div style="width: 100%; box-sizing: border-box;">
+    <div style="margin-top: 10px; background: #ffffff; padding: 20px 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
+      <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+        Summary (Tracking Scope)
+      </h4>
+      <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+        <b>Performance Tracking & Metrics:</b> All <b>competitive rounds</b> are logged at the round level for cumulative freshman-season reference. Recorded metrics include <b>field-relative scoring position, round variance, and counting score designation</b>.<br><br>
+        <b>Technical Documentation:</b> Round-level performance variables and competitive scoring outputs are logged within the cumulative freshman-season dataset. At the <b>Compadres Collegiate</b>, rounds played at <b>Iberostar Playa Paraíso GC</b> (Par 72) resulted in an <b>Even Par outcome relative to the field scoring average (77.10)</b>.<br><br>
+        <b>Scoring Record Summary:</b> <b>Counting score rate</b> is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
+      </p>
+    </div>
+
+    <div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
+      <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Coach Collaboration & Review</div>
+      </div>
+      <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
+        <b>Instructional Alignment:</b> Technical review and data-driven swing calibration are conducted in collaboration with <b><a href="https://www.instagram.com/bryangathright/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Bryan Gathright</a></b>. Competitive data, including <b>Clippd (w) Points</b> and <b>Scoreboard</b> metrics, are archived to monitor SG(Stroke Gained) trends and rank impact.
+      </div>
+    </div>
+  </div>
+</div>
 
 
   
