--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1548,20 +1548,33 @@
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
         Summary (Tracking Scope)
       </h4>
-      <p style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        <b>Performance Tracking & Metrics:</b> All <b>competitive rounds</b> are logged at the round level for cumulative freshman-season reference. Recorded metrics include <b>field-relative scoring position, round variance, and counting score designation</b>.<br><br>
-        <b>Technical Documentation:</b> Round-level performance variables and competitive scoring outputs are logged within the cumulative freshman-season dataset. At the <b>Compadres Collegiate</b>, rounds played at <b>Iberostar Playa Paraíso GC</b> (Par 72) resulted in an <b>Even Par outcome relative to the field scoring average (77.10)</b>.<br><br>
-        <b>Scoring Record Summary:</b> <b>Counting score rate</b> is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
-      </p>
+      <div style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+        <p style="margin: 0 0 12px 0;">
+          <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level within the cumulative freshman-season dataset. Recorded variables include field-relative scoring position, round-level variance, and counting score designation.
+        </p>
+        <p style="margin: 0 0 12px 0;">
+          <b>Technical Documentation:</b> Round-level performance variables and scoring outputs are archived within the freshman-season data record. At the <b>Compadres Collegiate</b>, rounds at <b>Iberostar Playa Paraíso GC (Par 72)</b> concluded at <b>Even Par</b> relative to the field scoring average (77.10).
+        </p>
+        <p style="margin: 0;">
+          <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
+        </p>
+      </div>
     </div>
 
-    <div style="margin-top: 14px; background: #ffffff; padding: 22px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
-      <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+    <div style="margin-top: 14px; background: #ffffff; padding: 22px 25px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
+      <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Coach Collaboration & Review</div>
+        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Technical Session Log — <a href="https://www.instagram.com/bryangathright/" target="_blank" style="color: #0c2340; text-decoration: underline;">Bryan Gathright</a></div>
       </div>
       <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
-        <b>Instructional Alignment:</b> Technical review and data-driven swing calibration are conducted in collaboration with <b><a href="https://www.instagram.com/bryangathright/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Bryan Gathright</a></b>. Competitive data, including <b>Clippd (w) Points</b> and <b>Scoreboard</b> metrics, are archived to monitor SG(Stroke Gained) trends and rank impact.
+        <ul style="margin: 0; padding-left: 18px; list-style-type: disc;">
+          <li style="margin-bottom: 8px;">A technical session was conducted focusing on <b>driver and long-iron dispersion control</b>. Emphasis was placed on narrowing dispersion patterns and stabilizing scoring variance during qualifying play.</li>
+          <li style="margin-bottom: 12px;">Competitive margin differentials from recent qualifying rounds were reviewed in the context of scoring efficiency and gap management.</li>
+        </ul>
+        <div style="background: #fff9f2; padding: 12px 15px; border-radius: 8px; border-left: 4px solid #f15a22; margin-top: 10px;">
+          <b style="color: #c53030; font-size: 11px; text-transform: uppercase; letter-spacing: 0.5px;">Strength & Conditioning Note:</b><br>
+          Heavy barbell-based lifting protocols were advised against during the current technical recalibration phase, due to potential effects on swing mechanics, distance efficiency, and dispersion consistency.
+        </div>
       </div>
     </div>
   </div>
