--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -492,14 +492,14 @@
                 </h3>
             </div>
 
-            <div class="memo-body" style="display: flex; flex-direction: column; gap: 28px; max-width: 100%; position: relative; z-index: 1; margin-bottom: 50px; box-sizing: border-box;">
+         <div class="memo-body" style="display: flex; flex-direction: column; gap: 28px; max-width: 100%; position: relative; z-index: 1; margin-bottom: 50px; box-sizing: border-box;">
                 <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box;">
                     <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-sizing: border-box;">01.</span>
                     <div style="box-sizing: border-box;">
-                        <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">R3 Technical Feedback</h4>
+                        <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Strategic Assessment</h4>
                         <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
-                            <strong>Status:</strong> Increased yardage applied under narrow fairway and high-wind conditions during recent competition. Driver and long-iron dispersion data has been recorded and remains under technical review. <br>
-                            <strong>Focus:</strong> Short-game execution (wedge/putting) continues to be logged without material deviation. Dispersion recalibration remains under review.
+                            <strong>Current State:</strong> Post-competition review indicates stable ball-speed output. Ongoing evaluation of scoring margin management during qualifying rounds. <br>
+                            <strong>Technical:</strong> Long-iron trajectory and dispersion calibration sessions with <a href="https://www.instagram.com/bryanglewisgolf/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Bryan Coach</a> remain active, with emphasis on proximity control and par-5 second-shot positioning.
                         </p>
                     </div>
                 </div>
@@ -507,10 +507,10 @@
                 <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box;">
                     <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-sizing: border-box;">02.</span>
                     <div style="box-sizing: border-box;">
-                        <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Corrective Training</h4>
+                        <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Conditioning Protocol</h4>
                         <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
-                            <strong>Technical:</strong> Recent training sessions have addressed driver dispersion and long-iron control. <br>
-                            <strong>Academic:</strong> Scheduling adjustments are in place to accommodate coursework, assignments, and upcoming competition dates.
+                            <strong>Physical:</strong> Heavy resistance training protocols have been reduced during the current technical recalibration phase. Conditioning focus shifted toward mobility and rotational stability. <br>
+                            <strong>Academic:</strong> Coursework scheduling remains aligned with February competition dates.
                         </p>
                     </div>
                 </div>
@@ -530,15 +530,16 @@
                 </div>
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                        • Event: Home Field Qualifying (Feb 10, 12, 17)<br>
-                        • Technical: Driver dispersion recalibration & long-iron accuracy
+                        • Round 2: Scoring margin management under qualifying conditions.<br>
+                        • Technical: Applying <a href="https://www.instagram.com/bryanglewisgolf/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Bryan Coach</a>'s dispersion control drills for driver and long irons.
                     </p>
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                        • Academic: Coursework and deadlines integrated into schedule<br>
-                        • Status: Training and academic schedules aligned
+                        • Recovery: Mobility and range-of-motion emphasis.<br>
+                        • Scoring Reference: Controlled execution relative to course par.
                     </p>
                 </div>
             </div>
+
 
             <div style="margin-top: 20px; padding-left: 10px; font-size: 10px; color: #cbd5e1; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; box-sizing: border-box;">
                 Joshua's Memo Note
