--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -499,7 +499,7 @@
                         <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Strategic Assessment</h4>
                         <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
                             <strong>Current State:</strong> Post-competition review indicates stable ball-speed output. Ongoing evaluation of scoring margin management during qualifying rounds. <br>
-                            <strong>Technical:</strong> Long-iron trajectory and dispersion calibration sessions with <a href="https://www.instagram.com/bryanglewisgolf/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Bryan Coach</a> remain active, with emphasis on proximity control and par-5 second-shot positioning.
+                            <strong>Technical:</strong> Long-iron trajectory and dispersion calibration sessions with <a href="https://www.instagram.com/bryanglewisgolf/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a> remain active, with emphasis on proximity control and par-5 second-shot positioning.
                         </p>
                     </div>
                 </div>
@@ -531,7 +531,7 @@
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
                         • Round 2: Scoring margin management under qualifying conditions.<br>
-                        • Technical: Applying <a href="https://www.instagram.com/bryanglewisgolf/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Bryan Coach</a>'s dispersion control drills for driver and long irons.
+                        • Technical: Applying <a href="https://www.instagram.com/bryanglewisgolf/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a>'s dispersion control drills for driver and long irons.
                     </p>
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
                         • Recovery: Mobility and range-of-motion emphasis.<br>
