--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -499,7 +499,7 @@
                         <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Strategic Assessment</h4>
                         <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
                             <strong>Current State:</strong> Post-competition review indicates stable ball-speed output. Ongoing evaluation of scoring margin management during qualifying rounds. <br>
-                            <strong>Technical:</strong> Long-iron trajectory and dispersion calibration sessions with <a href=https://www.instagram.com/bryangathright// target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a> remain active, with emphasis on proximity control and par-5 second-shot positioning.
+                            <strong>Technical:</strong> Long-iron trajectory and dispersion calibration sessions with <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a> remain active, with emphasis on proximity control and par-5 second-shot positioning.
                         </p>
                     </div>
                 </div>
@@ -531,7 +531,7 @@
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
                         • Round 2: Scoring margin management under qualifying conditions.<br>
-                        • Technical: Applying <a href="https://www.instagram.com/bryangathright/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a>'s dispersion control drills for driver and long irons.
+                        • Technical: Applying <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a>'s dispersion control drills for driver and long irons.
                     </p>
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
                         • Recovery: Mobility and range-of-motion emphasis.<br>
@@ -1565,7 +1565,7 @@
     <div style="margin-top: 14px; background: #ffffff; padding: 22px 25px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
       <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Technical Session Log — <a href="https://www.instagram.com/bryangathright/" target="_blank" style="color: #0c2340; text-decoration: underline;">Bryan Gathright</a></div>
+        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Technical Session Log — <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline;">Bryan Gathright</a></div>
       </div>
       <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
         <ul style="margin: 0; padding-left: 18px; list-style-type: disc;">
