--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -531,7 +531,7 @@
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
                         • Round 2: Scoring margin management under qualifying conditions.<br>
-                        • Technical: Applying <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a>'s dispersion control drills for driver and long irons.
+                        • Technical: Driver and long-iron dispersion calibration sessions with <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a> remain active.
                     </p>
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
                         • Recovery: Mobility and range-of-motion emphasis.<br>
