--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@ gtag('config', 'G-H1JW8YBDZ8');
       </div>
       <div style="display: flex; flex-direction: column; gap: 4px;">
         <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px;">
-          Strategic preparation for Upcoming Internal Qualifiers: Technical calibration.
+          February Qualifiers: scoring variance review and dispersion control.
         </div>
         <div style="color: #64748b; font-size: 14px; font-weight: 600;">
-          Academic workload management & Performance-readiness protocols.
+          Technical sessions and academic scheduling in place.
         </div>
       </div>
     </div>
