--- a/test-2.html
+++ b/test-2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -145,14 +144,14 @@ gtag('config', 'G-H1JW8YBDZ8');
       .logo-img { height: 40px; }
 
       .nav-links {
-        position: fixed; top: 0; left: -100%; 
+        position: fixed; top: 0; right: -100%; left: auto;
         width: 260px; height: 100vh;
         background: #ffffff !important; flex-direction: column;
         padding: 50px 25px; transition: 0.3s; z-index: 2000;
-        box-shadow: 10px 0 20px rgba(0,0,0,0.1);
+        box-shadow: -10px 0 20px rgba(0,0,0,0.1);
         align-items: flex-start; gap: 10px;
       }
-      .nav-links.active { left: 0; }
+      .nav-links.active { right: 0; left: auto; }
       
       .nav-links a { width: 100%; padding: 12px 20px; border-bottom: none; }
       .nav-links a.active { background-color: #F15A22 !important; color: #fff !important; }
@@ -273,7 +272,7 @@ gtag('config', 'G-H1JW8YBDZ8');
    <div style="position: relative; text-align: center; margin-bottom: 25px; padding: 10px 0; overflow: hidden;">
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
       UTSA
-    </div>   
+    </div>
 
 
 
