--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -482,15 +482,15 @@
         
         <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px; position: relative; box-shadow: 0 15px 30px rgba(0,0,0,0.07); display: flex; flex-direction: column; box-sizing: border-box; width: 100%;">
             
-            <div style="margin-bottom: 45px; position: relative; box-sizing: border-box;">
-               <style>//*앵커*//</style> 
-                <div id="Current-Focus" style="display: inline-block; box-sizing: border-box;">
-                <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 11, 2026</span>
-                </div>
-                <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block; box-sizing: border-box;">
-                    Performance Analysis & Training Plan
-                </h3>
-            </div>
+           <div style="margin-bottom: 45px; position: relative; box-sizing: border-box;">
+                <style>//*앵커*//</style> 
+                 <div id="Current-Focus" style="display: inline-block; box-sizing: border-box; margin-right: 15px; vertical-align: middle;">
+                 <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 11, 2026</span>
+                 </div>
+                 <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block; box-sizing: border-box; vertical-align: middle;">
+                     Performance Analysis & Training Plan
+                 </h3>
+             </div>
 
          <div class="memo-body" style="display: flex; flex-direction: column; gap: 28px; max-width: 100%; position: relative; z-index: 1; margin-bottom: 50px; box-sizing: border-box;">
                 <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box;">
@@ -546,6 +546,8 @@
         </div>
     </div>
 
+
+  
     <div class="performance-analysis-wrapper" style="width: 100%; margin: 0 0 30px 0; padding: 0; background: transparent; box-sizing: border-box;">
         <div style="background: #ffffff; border: 1.5px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box; width: 100%;">
             <div style="padding: 20px 0 40px 0; box-sizing: border-box; text-align: center; width: 100%;">
