--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -488,7 +488,7 @@
                  <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 11, 2026</span>
                  </div>
                  <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block; box-sizing: border-box; vertical-align: middle;">
-                     Performance Analysis & Training Plan
+                     Technical Analysis & Training Progression
                  </h3>
              </div>
 
