--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -551,12 +551,12 @@
     <div class="performance-analysis-wrapper" style="width: 100%; margin: 0 0 30px 0; padding: 0; background: transparent; box-sizing: border-box;">
         <div style="background: #ffffff; border: 1.5px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box; width: 100%;">
             <div style="padding: 20px 0 40px 0; box-sizing: border-box; text-align: center; width: 100%;">
-                <h2 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Performance Data Analysis</h2>
-                <p style="font-size: 0.85em; color: #666; margin-bottom: 45px; font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-weight: 400; text-transform: uppercase; margin-top: 8px;">Official Tournaments Records</p>
+                <h2 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Performance Data Metrics</h2>
+                <p style="font-size: 0.85em; color: #666; margin-bottom: 45px; font-family: 'Montserrat', sans-serif; letter-spacing: 1px; font-weight: 400; text-transform: uppercase; margin-top: 8px;">Official Tournaments Records</p>
                 
                 <div style="width: 100%; padding: 0 20px; box-sizing: border-box; text-align: left;">
                     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #0c2340; padding-bottom: 8px;">
-                        <h3 style="font-family: 'Oswald', sans-serif; font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px;">Tournament Finish History</h3>
+                        <h3 style="font-family: 'Oswald', sans-serif; font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px;">Event Results</h3>
                         <span style="background: #0c2340; color: #fff; padding: 4px 12px; font-family: 'Oswald', sans-serif; font-size: 0.8em; border-radius: 3px; font-weight: 500; letter-spacing: 0.5px;">FRESHMAN SEASON</span>
                     </div>
                     
@@ -567,7 +567,7 @@
                         </div>
                         <canvas id="archiveOfficialChart"></canvas>
                         <div style="position: absolute; bottom: 12px; left: 15px; right: 15px; display: flex; justify-content: space-between; font-family: 'Montserrat', sans-serif; font-size: 0.72em; color: #888; border-top: 1px dashed #ccc; padding-top: 10px; font-weight: 600; text-transform: uppercase;">
-                            <span>SOURCE: SCOREBOARD.CLIPPED, WAGR & GOLFSTAT</span>
+                            <span>SOURCE: SCOREBOARD.CLIPPD, WAGR & GOLFSTAT</span>
                             <span>CUMULATIVE: 6 EVENTOS / 18 RONDAS</span>
                         </div>
                     </div>
