--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -660,10 +660,10 @@
   
   <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
-      PERFORMANCE LOG
+      SEASON PERFORMANCE SUMMARY
     </h1>
     <p style="margin: 8px 0 0; color: #7f8c8d; font-size: 14px; font-weight: 500; letter-spacing: 1px;">
-      Official Tournament Schedule
+      Official Tournament Results & Full Schedule
     </p>
   </div>
   
@@ -986,7 +986,7 @@
 
   <div style="background: #000000; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
     <div style="display: flex; align-items: center;">
-      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">2026 ELITE AMATEUR SUMMER SERIES</span>
+      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">026 SUMMER COMPETITIVE SCHEDULE (PLANNED)</span>
       <span style="margin-left: 15px; background: #e53e3e; color: white; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">TBD</span>
     </div>
   </div>
@@ -1066,11 +1066,11 @@
 
   <div style="border-top: 2px solid #0c2340; border-bottom: 2px solid #0c2340; padding: 25px 0; margin-bottom: 40px; text-align: center; background-color: #fafafa;">
 
-    <h2 style="margin: 0; font-size: 22px; color: #0c2340; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Managed Official Archives</h2>
+    <h2 style="margin: 0; font-size: 22px; color: #0c2340; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">2025 Freshman Fall & Winter Off-Season Log</h2>
 
     <div style="width: 40px; height: 3px; background: #c98a2e; margin: 12px auto;"></div>
 
-    <h3 style="margin: 0; font-size: 13px; color: #666; letter-spacing: 3px; font-weight: 600; text-transform: uppercase;">Tournament Results & WAGR Metrics</h3>
+    <h3 style="margin: 0; font-size: 13px; color: #666; letter-spacing: 3px; font-weight: 600; text-transform: uppercase;">Official Competition Records & WAGR Metrics</h3>
 
   </div>
 
@@ -1414,7 +1414,7 @@
 <div style="width: 100%; max-width: 900px; margin: 0 auto 40px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="background: #F15A22; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
     <div style="display: flex; align-items: center;">
-      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Performance Analytics</span>
+      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Key Metrics</span>
       <span style="margin-left: 15px; background: #0C2340; color: #ffffff; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">Clippd W</span>
     </div>
   </div>
@@ -1532,10 +1532,10 @@
       <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
         <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 20px; box-sizing: border-box;">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
-          <span style="word-break: keep-all;">PERFORMANCE & STRATEGY ANALYSIS</span>
+          <span style="word-break: keep-all;">TECHNICAL PERFORMANCE & OPERATIONAL REVIEW</span>
         </h3>
         <p style="margin: 0; color: #806600; font-size: 13px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; word-break: keep-all;">
-          (Freshman Season)
+          (ACTIVE PERFORMANCE CYCLE)
         </p>
       </div>
     </div>
@@ -1566,7 +1566,7 @@
     <div style="margin-top: 14px; background: #ffffff; padding: 22px 25px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
       <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 12px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Technical Session Log — <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline;">Bryan Gathright</a></div>
+        <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Technical Session Log — <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline;">Coach Bryan Gathright</a></div>
       </div>
       <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
         <ul style="margin: 0; padding-left: 18px; list-style-type: disc;">
