--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -398,12 +398,12 @@
 
   <div style="width: 100%; box-sizing: border-box;">
     <div style="display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 15px; flex-wrap: wrap; gap: 10px; padding: 0 10px;">
-      <h3 style="color: #0c2340; border-left: 5px solid #0c2340; padding-left: 15px; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">Qualifier Performance History</h3>
+      <h3 style="color: #0c2340; border-left: 5px solid #0c2340; padding-left: 15px; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">Qualifier History Log</h3>
       
       <div style="font-family: 'Montserrat', sans-serif; font-size: 0.8em; display: flex; gap: 10px; align-items: center;">
         <span style="color: #0c2340; font-weight: 700; border-bottom: 2px solid #E31837; padding-bottom: 2px; cursor: default;">THE CANYONS</span>
         <span style="color: #ccc; font-weight: 400; padding-bottom: 2px;">|</span>
-        <span style="color: #aaa; font-weight: 500; padding-bottom: 2px; cursor: default;">THE OAKS (DATA PENDING)</span>
+        <span style="color: #aaa; font-weight: 500; padding-bottom: 2px; cursor: default;">THE OAKS (INACTIVE SESSION)</span>
       </div>
     </div>
 
