--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -343,7 +343,7 @@
 
   <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 10px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 24px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
-      Tournament Schedule & Scoring
+      ACTIVE SEASON: PERFORMANCE LOG & METRICS
     </h1>
   </div>
     <div id="Tournament-Schedule-Scoring" style="padding-top: 5px;">
@@ -1001,7 +1001,7 @@
 
   <div style="background: #000000; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
     <div style="display: flex; align-items: center;">
-      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">026 SUMMER COMPETITIVE SCHEDULE (PLANNED)</span>
+      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">2026 SUMMER COMPETITIVE SCHEDULE (PLANNED)</span>
       <span style="margin-left: 15px; background: #e53e3e; color: white; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">TBD</span>
     </div>
   </div>
@@ -1441,7 +1441,6 @@
         <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
           UTSA TEAM ROSTER METRICS 
-          <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
         </h3>
       </div>
 
@@ -1480,7 +1479,6 @@
         <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #f15a22; padding-left: 20px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
           COMPETITIVE ANALYSIS 
-          <span style="font-size: 13px; color: #7f8c8d; font-weight: 600; letter-spacing: 0px;">(Freshman Season)</span>
         </h3>
       </div>
 
