--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1440,7 +1440,7 @@
       <div style="margin-bottom: 25px; box-sizing: border-box;">
         <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
-          UTSA TEAM ROSTER METRICS 
+          INDIVIDUAL SEASONAL METRICS
         </h3>
       </div>
 
@@ -1478,7 +1478,7 @@
       <div style="margin-bottom: 25px; box-sizing: border-box;">
         <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #f15a22; padding-left: 20px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
-          COMPETITIVE ANALYSIS 
+          COMPETITIVE & TEAM METRICS 
         </h3>
       </div>
 
