--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -343,7 +343,7 @@
 
   <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 10px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 24px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
-      ACTIVE SEASON: PERFORMANCE LOG & METRICS
+      ACTIVE SEASON LOG & METRICS
     </h1>
   </div>
     <div id="Tournament-Schedule-Scoring" style="padding-top: 5px;">
